--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tu Nombre - Servicios de Informática</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f7f7;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #444;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+
+        .container {
+            max-width: 960px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Tu Nombre</h1>
+        <p>Servicios de Informática</p>
+    </header>
+
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Clases</a>
+        <a href="#">Soporte Técnico</a>
+        <a href="#">Consultoría de Tecnología</a>
+        <a href="#">Creación de Páginas Web</a>
+        <a href="#">Matemáticas</a>
+        <a href="#">Estadística</a>
+    </nav>
+
+    <div class="container">
+        <h2>Bienvenido a mis servicios de informática</h2>
+        <p>Ofrezco una variedad de servicios de informática, incluyendo clases personalizadas, soporte técnico, consultoría de tecnología, creación de páginas web, y ayuda en matemáticas y estadística.</p>
+
+        <h3>Mis Servicios</h3>
+        <ul>
+            <li>Clases personalizadas de informática y matemáticas.</li>
+            <li>Soporte técnico para resolver problemas informáticos.</li>
+            <li>Consultoría de tecnología para ayudarte a tomar decisiones informáticas.</li>
+            <li>Creación de páginas web para tu negocio o proyecto personal.</li>
+            <li>Asistencia en matemáticas y estadística.</li>
+        </ul>
+
+        <h3>Contáctame</h3>
+        <p>Puedes encontrarme en las redes sociales:</p>
+        <p>Twitter: <a href="#">@tunombre</a></p>
+        <p>LinkedIn: <a href="#">/in/tunombre</a></p>
+    </div>
+
+    <footer>
+        <p>&copy; 2023 Tu Nombre. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
