--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Nombre - Servicios de Informática</title>
+    <title>Punta Paradise Tours - Servicios de Viajes</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,22 +53,21 @@
 </head>
 <body>
     <header>
-        <h1>Tu Nombre</h1>
-        <p>Servicios de Informática</p>
+        <h1>Punta Paradise Tours</h1>
+        <p>Servicios de Viajes</p>
     </header>
 
     <nav>
         <a href="#">Inicio</a>
-        <a href="#">Clases</a>
-        <a href="#">Soporte Técnico</a>
-        <a href="#">Consultoría de Tecnología</a>
-        <a href="#">Creación de Páginas Web</a>
-        <a href="#">Matemáticas</a>
-        <a href="#">Estadística</a>
+        <a href="#">Transportes</a>
+        <a href="#">Hoteles</a>
+        <a href="#">Gastronomia</a>
+        <a href="#">Patrimonio Cultural y Natural</a>
+        <a href="#">Festividades y Eventos</a>
     </nav>
 
     <div class="container">
-        <h2>Bienvenido a mis servicios de informática</h2>
+        <h2>Bienvenidos a nuestros servicios de viajes</h2>
         <p>Ofrezco una variedad de servicios de informática, incluyendo clases personalizadas, soporte técnico, consultoría de tecnología, creación de páginas web, y ayuda en matemáticas y estadística.</p>
 
         <h3>Mis Servicios</h3>
@@ -82,8 +81,7 @@
 
         <h3>Contáctame</h3>
         <p>Puedes encontrarme en las redes sociales:</p>
-        <p>Twitter: <a href="#">@tunombre</a></p>
-        <p>LinkedIn: <a href="#">/in/tunombre</a></p>
+        <p>Instagram: <a href="#">@puntaparadisetours</a></p>
     </div>
 
     <footer>
