--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punta Paradise Tours - Servicios de Viajes</title>
+    <title>Descubre Punta Cana</title>
     <style>
+        /* Estilos CSS (puedes personalizarlos según tus preferencias) */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            background-color: #f2f2f2;
         }
 
         header {
@@ -20,72 +21,113 @@
             text-align: center;
         }
 
-        nav {
-            background-color: #444;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-        }
-
-        .container {
-            max-width: 960px;
-            margin: 20px auto;
+        section {
             padding: 20px;
+            margin: 20px;
             background-color: #fff;
+            border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        footer {
-            background-color: #333;
+        h2 {
+            color: #333;
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        .offer {
+            background-color: #4CAF50;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Punta Paradise Tours</h1>
-        <p>Servicios de Viajes</p>
+        <h1>Descubre Punta Cana</h1>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Transportes</a>
-        <a href="#">Hoteles</a>
-        <a href="#">Gastronomia</a>
-        <a href="#">Patrimonio Cultural y Natural</a>
-        <a href="#">Festividades y Eventos</a>
-    </nav>
-
-    <div class="container">
-        <h2>Bienvenidos a nuestros servicios de viajes</h2>
-        <p>Ofrezco una variedad de servicios de informática, incluyendo clases personalizadas, soporte técnico, consultoría de tecnología, creación de páginas web, y ayuda en matemáticas y estadística.</p>
-
-        <h3>Mis Servicios</h3>
+    <section>
+        <h2>Enclaves Culturales</h2>
         <ul>
-            <li>Clases personalizadas de informática y matemáticas.</li>
-            <li>Soporte técnico para resolver problemas informáticos.</li>
-            <li>Consultoría de tecnología para ayudarte a tomar decisiones informáticas.</li>
-            <li>Creación de páginas web para tu negocio o proyecto personal.</li>
-            <li>Asistencia en matemáticas y estadística.</li>
+            <li>Altos de Chavón</li>
+            <li>Catedral de Higüey</li>
+            <li>Basílica de Nuestra Señora de la Altagracia</li>
+            <li>Museo Indígena de Altos de Chavón</li>
+            <li>Pueblo de Higüey</li>
         </ul>
+    </section>
 
-        <h3>Contáctame</h3>
-        <p>Puedes encontrarme en las redes sociales:</p>
-        <p>Instagram: <a href="#">@puntaparadisetours</a></p>
+    <section>
+        <h2>Enclaves Naturales</h2>
+        <ul>
+            <li>Parque Nacional del Este</li>
+            <li>Reserva Ecológica Ojos Indígenas</li>
+            <li>Playa Bávaro</li>
+            <li>Isla Saona</li>
+            <li>Hoyo Azul</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Transportes</h2>
+        <ul>
+            <li>Aeropuerto Internacional de Punta Cana</li>
+            <li>Servicios de traslado</li>
+            <li>Taxi y transporte público</li>
+            <li>Alquiler de coches</li>
+            <li>Transporte marítimo</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Hoteles</h2>
+        <ul>
+            <li>Resorts todo incluido</li>
+            <li>Hoteles boutique</li>
+            <li>Eco-lodges</li>
+            <li>Hospedaje local</li>
+            <li>Villas privadas</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Gastronomía</h2>
+        <ul>
+            <li>Plátanos fritos</li>
+            <li>Mofongo</li>
+            <li>Pescado y mariscos frescos</li>
+            <li>Sancocho</li>
+            <li>Rum y cocteles tropicales</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Festividades y Eventos</h2>
+        <ul>
+            <li>Carnaval de Punta Cana</li>
+            <li>Festival de Merengue y Bachata</li>
+            <li>Semana Santa</li>
+            <li>Festival del Coco</li>
+            <li>Competencia de Golf Punta Cana</li>
+        </ul>
+    </section>
+
+    <div class="offer">
+        <h2>Oferta Especial</h2>
+        <p>Descubre el Paraíso en Punta Cana: Sumérgete en aguas turquesas, relájate en playas de arena blanca y experimenta la calidez de la cultura dominicana. Con nuestro paquete exclusivo, disfrutarás de estancias en lujosos resorts todo incluido, degustarás la exquisita gastronomía local, explorarás la riqueza natural y cultural de la región, y te unirás a emocionantes festividades locales. Además, te ofrecemos traslados sin complicaciones, opciones de alojamiento para todos los gustos y actividades emocionantes para toda la familia. ¡Reserva ahora y deja que Punta Cana te enamore con su belleza, su hospitalidad y su encanto caribeño! Tu escapada perfecta te espera en Punta Cana.</p>
     </div>
 
-    <footer>
-        <p>&copy; 2023 Tu Nombre. Todos los derechos reservados.</p>
-    </footer>
 </body>
+
 </html>
